# sloww

./: .env.example  .gitignore  .impeccable.md  README.md  SETUP.md  compose.env.example  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  env.py  pyproject.toml  run-dev.sh
backend/api/: __init__.py  config.py  main.py
backend/api/auth/: __init__.py  clerk.py  deps.py
backend/api/chat/: __init__.py  repository.py  responses.py  routes.py  services.py  sse.py
backend/api/documents/: __init__.py  repository.py  responses.py  routes.py  services.py
backend/api/projects/: constants.py  repository.py  responses.py  routes.py  services.py
backend/api/shared/: __init__.py  access.py  chat_codes.py  db.py  db_url.py  logging.py  pubsub.py  startup_checks.py  status_codes.py
backend/api/uploads/: __init__.py  gcs_client.py  repository.py  responses.py  routes.py  services.py  storage.py
backend/api/user/: __init__.py  repository.py  responses.py  routes.py  services.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_baseline_project_centric_schema.py  002_add_num_sources_to_projects.py  003_project_title_varchar_256.py  004_qdrant_only_citations.py  005_projects_default_unique_partial.py
data-loader/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  run-dev.sh
data-loader/data_loader/: config.py  embeddings.py  extract.py  gcs_storage.py  http_app.py  main.py  parsing.py  qdrant_ingest.py  storage.py
data-loader/data_loader/jobs/: poller.py  repository.py  runner.py
data-loader/data_loader/shared/: db.py  logging.py  status_codes.py
inference/: .env.example  Dockerfile  INFERENCE.md  README.md  pyproject.toml  run-dev.sh
inference/src/: __init__.py  config.py  main.py
inference/src/agent/: __init__.py  events.py
inference/src/chat/: repository.py  responses.py  routes.py  services.py
inference/src/generation/: modules.py  nodes.py  signatures.py
inference/src/graph/: builder.py  edges.py  state.py
inference/src/orchestration/: modules.py  nodes.py  signatures.py
inference/src/retrieval/: coverage.py  dense.py  fusion.py  nodes.py  reranker.py  sparse.py
inference/src/shared/: db.py  llm_json.py  llm_turn_trace.py  logging.py  provider_cooldown.py  request_context.py  startup_checks.py  status_codes.py  stream_context.py  turn_timing.py
inference/src/shared/clients/: embedding_client.py  llm_client.py  qdrant_client.py
inference/tests/: conftest.py  test_chitchat_heuristic.py  test_citation_assert_diagnostic.py  test_citation_degrade.py  test_edges.py  test_graph_chitchat.py  test_turn_timing.py
ui/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  run-dev.sh  vite.config.ts
ui/src/: index.css  main.tsx  vite-env.d.ts
ui/src/app/: App.tsx  BootstrapLayout.tsx
ui/src/shared/: SlowwLogo.tsx  api.ts  clerkTheme.ts  format.ts
(+20 files in other folders)
